-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 14.0.0
-
None
-
-
ee8245d8a (master)
Test steps:
1. Create a new 'Qt Quick Application' project
2. Move cursor over different keywords and press F1
Result:
'No documentation available.' note is displayed.
- relates to
-
QDS-13248 Fix context sensitve help for items
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-30675 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
554591,5 | Core: allow multiple contexts per widget | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |